--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -11,15 +11,13 @@
 /* For the rain container */
 #rain-container{
   background: linear-gradient(0deg, var(--gray-5), var(--gray-4));
+  background-size: cover;
   position: fixed;
   left: 0;
   top: 0;
-  z-index: -5;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+  z-index: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 .drop {
@@ -28,6 +26,11 @@
   bottom: 100%;
   background: linear-gradient(0deg, var(--white-1), var(--gray-1));
   animation: fade forwards ease-out, fall linear infinite;
+}
+
+.footer {
+  position: relative;
+  z-index: 2;
 }
 
 @keyframes fade {
